Added some facts and notes from discussion on homework 3

--- a/facts/facts.tex
+++ b/facts/facts.tex
@@ -93,6 +93,6 @@
         \item \textbf{Weak Limits have Bounded Norms} - The $L^p$ norm of a weak limit is bounded by the lim~inf of the $L^p$ norms of its sequence.
         \item \textbf{Weakly convergent Sequences are bounded} - Weakly convergent $L^p$ sequences have bounded $L^p$ norms.
         \item \textbf{Egoroff's Theorem} - For pointwise convergent sequences on finite domains, there exist arbitrarily small (positive measure) subsets such that the sequence converges uniformly on its complement. $$\forall \E < 0,\ \exists E \subset \Omega\ \text{with}\ \abs{E} < \E\ \text{such that}\ f_k \rightarrow f\ \text{uniformly on}\ \Omega\setminus E.$$
-        \item \textbf{thing}
+        \item \textbf{Theorem 1.67} - Almost everywhere convergence of a bounded (in $L^p$) sequence in a bounded domain implies weak convergence for $1 < p < \infty$. $$\Omega \subset \mathbb{R}^n\ \text{bounded},\ \ \ \ \sup_{k}\norm{f_k}_p \leq M < \infty,\ \ \ \text{and}\ \ \ f_k \rightarrow f\ \text{ a.e.}\ \ \implies\ \ f_k \rightharpoonup f.$$
     \end{enumerate}
 \end{document}
